2011-01-25  Dirk Schulze  <krit@webkit.org>

Reviewed by Nikolas Zimmermann.

        SVG is missing to-animation support for Path
        https://bugs.webkit.org/show_bug.cgi?id=52982

        Added an animation test to check 'to' animations in combination with SVG paths.

        * svg/animations/animate-path-to-animation-expected.txt: Added.
        * svg/animations/animate-path-to-animation.html: Added.
        * svg/animations/script-tests/animate-path-to-animation.js: Added.
        (sample1):
        (sample2):
        (sample3):
        (executeTest):
2011-01-25  Dirk Schulze  <krit@webkit.org>

        Reviewed by Nikolas Zimmermann.

        SVG is missing to-animation support for Path
        https://bugs.webkit.org/show_bug.cgi?id=52982

        SVG was missing 'to' animation support for SVG paths. Even the fallback to discrete
        animation did not work and an assert was thrown, because of the missing m_fromPath.
        This also influences a test of the W3C test suite. Subtest 2 of animate-elem-83-t.svg passes now.

        Test: svg/animations/animate-path-to-animation.html

        * svg/SVGAnimateElement.cpp:
        (WebCore::SVGAnimateElement::calculateAnimatedValue): Take the value of the last SVGAnimateElement for
        m_fromPath, since 'to' animations are accumulative.
        (WebCore::SVGAnimateElement::calculateFromAndToValues): Added support for 'to' animations.
        (WebCore::SVGAnimateElement::resetToBaseValue): Set m_animatedPath on the first animation element to baseVal.
        * svg/SVGPathByteStream.h:
        (WebCore::SVGPathByteStream::copySVGPathByteStream): Return copy of current byte stream.


Canonical link: https://commits.webkit.org/66819@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@76589 268f45cc-cd09-0410-ab3c-d52691b4dbfc